--- a/hotel-web/src/main/resources/templates/index.html
+++ b/hotel-web/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 </div>
 
 <script th:inline="javascript">
-    var username = /*[[${name}]]*/ 'No Body';
+    var username = /*[[${test}]]*/ 'No Body';
     var app6 = new Vue({
         el: '#app-6',
         data: {
