--- a/hotel-web/src/main/resources/static/views/Activity/index.html
+++ b/hotel-web/src/main/resources/static/views/Activity/index.html
@@ -2,28 +2,24 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="HandheldFriendly" content="true">
-    <meta name="MobileOptimized" content="320">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>活动设置</title>
-    <link href="../../static/css/vendor.css?59c50bd87d4eb4856b7f" rel="stylesheet">
-    <link href="../../static/css/views/Activity/index.css?59c50bd87d4eb4856b7f" rel="stylesheet">
-</head>
+  <meta charset="UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="renderer" content="webkit">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="HandheldFriendly" content="true">
+  <meta name="MobileOptimized" content="320">
+  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>活动设置</title>
+<link href="../../static/css/vendor.css?4472dde29b847b9cfdc7" rel="stylesheet"><link href="../../static/css/views/Activity/index.css?4472dde29b847b9cfdc7" rel="stylesheet"></head>
 
 <body>
-<div id="app">
+  <div id="app">
     <router-view></router-view>
-</div>
-<!-- built files will be auto injected -->
-<script type="text/javascript" src="../../static/js/vendor.js?59c50bd87d4eb4856b7f"></script>
-<script type="text/javascript" src="../../static/js/views/Activity/index.js?59c50bd87d4eb4856b7f"></script>
-</body>
+  </div>
+  <!-- built files will be auto injected -->
+<script type="text/javascript" src="../../static/js/vendor.js?4472dde29b847b9cfdc7"></script><script type="text/javascript" src="../../static/js/views/Activity/index.js?4472dde29b847b9cfdc7"></script></body>
 
 </html>
