add column activity_name

--- a/hotel-web/src/main/resources/static/views/ERP/index.html
+++ b/hotel-web/src/main/resources/static/views/ERP/index.html
@@ -12,15 +12,17 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>新增酒店</title>
-<link href="../../static/css/vendor.css?c96a0faadf59c653fc7c" rel="stylesheet"><link href="../../static/css/views/ERP/index.css?c96a0faadf59c653fc7c" rel="stylesheet"></head>
+  <title>多粉客来驿PMS_智慧酒店管理系统_酒店客房管理软件_客来驿登录_用多粉，好生意</title>
+  <meta name="keywords" content="多粉客来驿PMS，为商家提供一整套智能化的酒店运营管理方案，帮助酒店实现“去前台化”的目标，真正简化前台流程，减少运营成本，提升住户体验，提高管理水平，增加酒店收入。">
+  <meta name="description" content="多粉客来驿PMS，为商家提供一整套智能化的酒店运营管理方案，帮助酒店实现“去前台化”的目标，真正简化前台流程，减少运营成本，提升住户体验，提高管理水平，增加酒店收入。">
+<link href="../../static/css/vendor.css?0b4e8683896767632953" rel="stylesheet"><link href="../../static/css/views/ERP/index.css?0b4e8683896767632953" rel="stylesheet"></head>
 
 <body>
   <div id="app">
     <router-view></router-view>
   </div>
   <!-- built files will be auto injected -->
-<script type="text/javascript" src="../../static/js/vendor.js?c96a0faadf59c653fc7c"></script><script type="text/javascript" src="../../static/js/views/ERP/index.js?c96a0faadf59c653fc7c"></script></body>
+<script type="text/javascript" src="../../static/js/vendor.js?0b4e8683896767632953"></script><script type="text/javascript" src="../../static/js/views/ERP/index.js?0b4e8683896767632953"></script></body>
 <!-- <script src="./socket.io.js"></script> -->
 
 </html>
