--- a/hotel-web/src/main/resources/pages/back/views/Add/index.html
+++ b/hotel-web/src/main/resources/pages/back/views/Add/index.html
@@ -12,17 +12,17 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.2&key=2ad4cac58f1df07657104a5eff1fc50a"></script>
+  <script type="text/javascript" src="//webapi.amap.com/maps?v=1.4.2&key=2ad4cac58f1df07657104a5eff1fc50a"></script>
   <title>多粉客来驿PMS_智慧酒店管理系统_酒店客房管理软件_客来驿登录_用多粉，好生意</title>
   <meta name="keywords" content="多粉客来驿PMS，为商家提供一整套智能化的酒店运营管理方案，帮助酒店实现“去前台化”的目标，真正简化前台流程，减少运营成本，提升住户体验，提高管理水平，增加酒店收入。">
   <meta name="description" content="多粉客来驿PMS，为商家提供一整套智能化的酒店运营管理方案，帮助酒店实现“去前台化”的目标，真正简化前台流程，减少运营成本，提升住户体验，提高管理水平，增加酒店收入。">
-<link href="/back/static/css/vendor.css?cf971edc4123438ee027" rel="stylesheet"><link href="/back/static/css/views/Add/index.css?cf971edc4123438ee027" rel="stylesheet"></head>
+<link href="/back/static/css/vendor.css?83ae53302cbf677819f1" rel="stylesheet"><link href="/back/static/css/views/Add/index.css?83ae53302cbf677819f1" rel="stylesheet"></head>
 
 <body>
   <div id="app">
     <router-view></router-view>
   </div>
   <!-- built files will be auto injected -->
-<script type="text/javascript" src="/back/static/js/vendor.js?cf971edc4123438ee027"></script><script type="text/javascript" src="/back/static/js/views/Add/index.js?cf971edc4123438ee027"></script></body>
+<script type="text/javascript" src="/back/static/js/vendor.js?83ae53302cbf677819f1"></script><script type="text/javascript" src="/back/static/js/views/Add/index.js?83ae53302cbf677819f1"></script></body>
 
 </html>
