C:/Git/main/resources/pages/back/static/img/iconfont.svg.

--- a/hotel-web/src/main/resources/pages/back/static/css/views/Add/index.css
+++ b/hotel-web/src/main/resources/pages/back/static/css/views/Add/index.css
@@ -1,1 +1,1 @@
-#container[data-v-5bf9b3e7]{width:700px;height:290px;border:1px solid #bfcbd9;margin-top:10px}#city[data-v-5bf9b3e7]{height:30px;display:none}#container[data-v-923d7f70]{width:700px;height:290px;border:1px solid #bfcbd9;margin-top:10px}#city[data-v-923d7f70]{height:30px;display:none}
+#container{width:700px;height:290px;border:1px solid #bfcbd9;margin-top:10px}#city{height:30px;display:none}
