--- a/hotel-web/src/main/resources/pages/back/static/css/views/Mobile/index.css
+++ b/hotel-web/src/main/resources/pages/back/static/css/views/Mobile/index.css
@@ -1,1 +1,1 @@
-.FoodAdd form[data-v-764ca87a]{width:auto}.FoodAdd form .el-date-editor[data-v-764ca87a]{overflow:hidden;margin:0 20px 0 5px}
+.FoodAdd form{width:auto}.FoodAdd form .el-date-editor{overflow:hidden;margin:0 20px 0 5px}
