--- a/hotel-web/src/main/resources/pages/back/static/css/views/Order/index.css
+++ b/hotel-web/src/main/resources/pages/back/static/css/views/Order/index.css
@@ -1,1 +1,1 @@
-h2[data-v-4f90d4b7]{border-bottom:1px solid #eee;margin-bottom:15px;padding-bottom:10px}
+h2{border-bottom:1px solid #eee;margin-bottom:15px;padding-bottom:10px}
