--- a/hotel-web/src/main/resources/pages/back/static/css/views/nav/nav.css
+++ b/hotel-web/src/main/resources/pages/back/static/css/views/nav/nav.css
@@ -1,1 +1,1 @@
-.nav[data-v-6afac7ac]{width:25%;margin:10% 5%}.nav a[data-v-6afac7ac]{margin-left:10px;padding:10px;display:block;color:#333;font-size:20px}
+.nav{width:25%;margin:10% 5%}.nav a{margin-left:10px;padding:10px;display:block;color:#333;font-size:20px}
